--- a/src/app/partials/chat-card/user-card/user-card.component.html
+++ b/src/app/partials/chat-card/user-card/user-card.component.html
@@ -14,7 +14,7 @@
         </div>
         <div>
             <mat-divider></mat-divider>
-            <mat-form-field appearance="none">
+            <mat-form-field [appearance]="$any('none')">
                 <textarea placeholder="Write a message" matInput #messageInput cdkTextareaAutosize
                     #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1" cdkAutosizeMaxRows="5"></textarea>
             </mat-form-field>
