--- a/src/app/widget/table/table-view/table-view.component.scss
+++ b/src/app/widget/table/table-view/table-view.component.scss
@@ -19,7 +19,6 @@ table {
         th,
         td {
           text-align: inherit;
-          font-size: 12px;
         }
         th {
           font-weight: 500;
@@ -43,7 +42,7 @@ table {
         &:last-child {
           height: 50px;
           th {
-            padding: 0 1.5rem;
+            padding: 0 1.5rem 0 0;
             input,
             select {
               border-radius: 4px;
