--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,6 +1,6 @@
-@import 'functions';
-@import 'mixins';
-@import 'variables';
+@import "functions";
+@import "mixins";
+@import "variables";
 
 html,
 body {
@@ -49,7 +49,7 @@ body {
 mat-form-field {
   width: 100%;
   $base_width: 0.75em;
-  &[appearance='outline'] {
+  &[appearance="outline"] {
     .mat-form-field-infix {
       padding: $base_width 0 $base_width 0 !important;
       .mat-form-field-label-wrapper {
@@ -65,3 +65,4 @@ body {
     background-color: #d5dfe799;
   }
 }
+@include scrollbar_theme();
