--- a/src/app/widget/table/table-view/table-view.component.html
+++ b/src/app/widget/table/table-view/table-view.component.html
@@ -15,16 +15,16 @@
             </ng-container>
             <ng-template #normalTemplate>
               <ng-container *ngIf="column.type === 'text'">
-                <input [semiTableFilter]="column.key" type="text">
+                <input [tableFilter]="column.key" type="text">
               </ng-container>
               <ng-container *ngIf="column.type === 'checkbox'">
-                <input [semiTableFilter]="column.key" type="checkbox">
+                <input [tableFilter]="column.key" type="checkbox">
               </ng-container>
               <ng-container *ngIf="column.type === 'date'">
-                <input [semiTableFilter]="column.key" id="date" type="date">
+                <input [tableFilter]="column.key" id="date" type="date">
               </ng-container>
               <ng-container *ngIf="column.type === 'select'">
-                <select [semiTableFilter]="column.key" [type]="column.type">
+                <select [tableFilter]="column.key" [type]="column.type">
                   <ng-container *ngFor="let item of column.list">
                     <option value="item.value">{{ item.name }}</option>
                   </ng-container>
@@ -34,7 +34,7 @@
           </th>
         </ng-container>
         <ng-template #noFilter>
-          <th style="width: 1% !important"></th>
+          <th></th>
         </ng-template>
       </ng-container>
       <ng-container *ngIf="actionComponent && actionComponent?.position === 'end'">
