--- a/src/app/widget/table/table-view/table-view.component.scss
+++ b/src/app/widget/table/table-view/table-view.component.scss
@@ -42,7 +42,7 @@ table {
           height: 50px;
           th {
             padding: 0 1.5rem 0 0;
-            input,
+            input:not([type="checkbox"]),
             select {
               border-radius: 4px;
               background-color: white;
