--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,11 +2,9 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import './app/app.theme';
 @import 'assets/scss/main';
-// @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese");
-@import url('https://fonts.googleapis.com/css?family=Tajawal:200,300,400,500,700,800,900&display=swap&subset=arabic');
-
+@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,700&display=swap');
 $typography: mat-typography-config(
-  $font-family: "'Tajawal', sans-serif",
+  $font-family: "'Nunito', sans-serif",
   $input: mat-typography-level(16px, 1.125, 400)
 );
 
