--- a/src/app/widget/upload-file/upload-file.component.scss
+++ b/src/app/widget/upload-file/upload-file.component.scss
@@ -1,5 +1,5 @@
-@import 'functions';
-@import 'variables';
+@import "functions";
+@import "variables";
 
 :host {
   display: block;
@@ -38,5 +38,10 @@
         filter: opacity(0.8) blur(1px);
       }
     }
+  }
+
+  &.box {
+    height: 80px;
+    width: 100px;
   }
 }
