--- a/src/app/widget/sidebar/sidebar.component.scss
+++ b/src/app/widget/sidebar/sidebar.component.scss
@@ -1,12 +1,11 @@
-@import 'variables';
-@import 'mixins';
-@import '~@angular/material/theming';
+@import "variables";
+@import "mixins";
+@import "~@angular/material/theming";
 $transition-timing: ease-in-out;
 $transition-duration: 0.25s;
 :host {
   position: relative;
   display: block;
-  height: 100%;
   --width: 100%;
   ::ng-deep {
     > div {
