--- a/src/app/layout/container/container.component.html
+++ b/src/app/layout/container/container.component.html
@@ -5,7 +5,6 @@
       <section class="position-relative router-container h-100">
         <app-sidebar name="chat_bar" class="right">
           <div sidebar-drawer class="border-left">
-            <!-- <mat-card-header></mat-card-header> -->
             <mat-card-content>
               <mat-nav-list dense>
                 <div class="px-3">
@@ -18,7 +17,7 @@
                 <div class="px-3">
                   <p>Groups</p>
                 </div>
-                <mat-list-item *ngFor="let group of ($groups | async)" (click)="openChatCard($any(group))">
+                <mat-list-item *ngFor="let group of ($groups | async)" (click)="openGroupChatCard(group)">
                   <img matListAvatar ngxGravatar email="" [src]="group.logo" fallback="identicon">
                   <p matLine> {{group.title}} </p>
                 </mat-list-item>
