--- a/src/app/partials/chat-card/user-card/user-card.component.html
+++ b/src/app/partials/chat-card/user-card/user-card.component.html
@@ -37,7 +37,7 @@
         <button mat-icon-button>
             <mat-icon class="text-muted">emoji_emotions</mat-icon>
         </button>
-        <button mat-icon-button class="ml-auto" (click)="sendMessage(messageInput?.value)">
+        <button mat-icon-button class="ml-auto" (click)="sendMessage(messageInput)">
             <mat-icon class="text-muted">send</mat-icon>
         </button>
     </mat-card-footer>
