enhance mobile-control component to validate it self and to format the number correctly

--- a/src/app/partials/form/form-factory/form-factory.component.html
+++ b/src/app/partials/form/form-factory/form-factory.component.html
@@ -93,5 +93,5 @@
     <app-mobile-control [formControl]="field">
     </app-mobile-control>
 </ng-container>
-<!-- <app-country-control [formControlName]="getName('countryCode')"></app-country-control> -->
+<app-country-control [formControl]="field"></app-country-control>
 <!-- TODO: Setup datetime type -->
