--- a/src/app/widget/country-control/country-control.component.html
+++ b/src/app/widget/country-control/country-control.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
     <mat-label>{{placeholder || 'Country'}}</mat-label>
-    <mat-select matInput [formControl]="control" (selectionChange)="updateModel($event?.value)">
+    <mat-select matInput [formControl]="formControl" (selectionChange)="updateModel($event?.value)">
         <mat-select-trigger>
             <div class="iti__flag-box">
                 <div class="iti__flag iti__{{currentCountry?.code.toLowerCase()}}"></div>
