--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
 @import './app/app.theme';
 @import 'assets/scss/main';
 @import url('https://fonts.googleapis.com/css?family=Nunito:300,400,700&display=swap');
+@import '~@ctrl/ngx-emoji-mart/picker';
+
 $typography: mat-typography-config(
   $font-family: "'Nunito', sans-serif",
   $input: mat-typography-level(16px, 1.125, 400)
