--- a/src/app/partials/form/form-factory/form-factory.component.html
+++ b/src/app/partials/form/form-factory/form-factory.component.html
@@ -90,8 +90,7 @@
             ...fieldOptions
         });
     } -->
-    <app-mobile-control [formControl]="field">
-    </app-mobile-control>
+    <app-mobile-control [formControl]="field"></app-mobile-control>
 </ng-container>
-<app-country-control [formControl]="field"></app-country-control>
+<!-- <app-country-control [formControl]="field"></app-country-control> -->
 <!-- TODO: Setup datetime type -->
