--- a/src/app/partials/chat-card/user-card/user-card.component.scss
+++ b/src/app/partials/chat-card/user-card/user-card.component.scss
@@ -29,7 +29,7 @@
     font-size: 20px;
     height: 20px;
     width: 20px;
-    margin: 0rem 0.25rem;
+    margin: 0 0.25rem;
     cursor: pointer;
     :hover {
       color: #8e8c8c;
