--- a/src/app/widget/pincode-box/pincode-box.component.html
+++ b/src/app/widget/pincode-box/pincode-box.component.html
@@ -1,1 +1,27 @@
-<p>pincode-box works!</p>
+<mat-card class="mat-elevation-z0">
+    <mat-card-header class="justify-content-center text-center">
+        <mat-card-title class="font-weight-bold">
+            Verify your phone number
+        </mat-card-title>
+        <mat-card-subtitle>
+            Please enter the verification code that was sent via SMS
+        </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <div class="d-flex">
+            <ng-container *ngFor="let i of inputCount; let index = index;">
+                <mat-form-field style="width: 10%;" class="mx-3" appearance="legacy">
+                    <input matInput #codeInput (keypress)="onKeyup(index)" (keyup.backspace)="onBackspace(index);">
+                </mat-form-field>
+            </ng-container>
+        </div>
+        <div class="mx-auto w-100 text-center">
+            <button mat-flat-button color="primary" class="w-50" #confirmButton>Confirm</button>
+        </div>
+        <div class="d-flex flex-column align-items-center mt-3">
+            <span class="text-muted">Didn't receive the code?</span>
+            <button mat-button>Send code again!</button>
+            <button class="align-self-start" mat-button color="accent">Change phone number</button>
+        </div>
+    </mat-card-content>
+</mat-card>
