some layout tuning

--- a/src/app/layout/container/container.component.html
+++ b/src/app/layout/container/container.component.html
@@ -1,7 +1,7 @@
 <app-navbar>
   <app-content>
     <main class="flex-fill d-flex flex-column h-100">
-      <app-toolbar class="w-100 d-flex justify-content-end align-items-center bg-white mat-elevation-z1"></app-toolbar>
+      <app-toolbar class="w-100 d-flex justify-content-end align-items-center bg-white border-bottom"></app-toolbar>
       <section class="position-relative router-container h-100">
         <app-sidebar name="chat_bar" class="right">
           <div sidebar-drawer class="border-left">
