--- a/src/app/layout/container/container.component.scss
+++ b/src/app/layout/container/container.component.scss
@@ -1,7 +1,7 @@
-@import 'functions';
-@import 'mixins';
-@import 'variables';
-@import '~@angular/material/theming';
+@import "functions";
+@import "mixins";
+@import "variables";
+@import "~@angular/material/theming";
 
 :host {
   app-toolbar {
@@ -18,7 +18,6 @@
   app-sidebar {
     --width: 230px;
     [sidebar-drawer] {
-      background-color: get_color_from_platte($mat-gray, 50);
       mat-nav-list {
         img {
           width: 30px !important;
@@ -28,3 +27,6 @@
     }
   }
 }
+
+// Background
+// https://dribbble.com/shots/6903052-Tp-Concept/attachments/1467171
