--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <app-sidebar name="navbar">
-  <div sidebar-drawer class="sidebar-drawer mat-elevation-z1">
+  <div sidebar-drawer class="sidebar-drawer border-right">
     <header #header>
       <app-navbar-header class="p-3"></app-navbar-header>
     </header>
