--- a/src/app/layout/components/navbar-header/navbar-header.component.html
+++ b/src/app/layout/components/navbar-header/navbar-header.component.html
@@ -1,13 +1,6 @@
 <div class="d-flex align-items-center">
-  <img class="mr-3" ngxGravatar email="ezzabuzaid@hotmail.com" fallback="identicon">
-  <div class="text-wrapper drawer-invisible">
-    <h6 class="mb-0 mt-2">{{ 'Buildozer' | translate }} | {{ 'Ezzabuzaid' | translate}}</h6>
+  <img ngxGravatar email="ezzabuzaid@hotmail.com" fallback="identicon">
+  <div class="text-wrapper">
+    <h6 class="mb-0 mt-2 ml-3 drawer-invisible">{{ 'Buildozer' | translate }} | Ezzabuzaid</h6>
   </div>
 </div>
-
-<!-- TODO: test it out -->
-<!-- <div class="d-flex align-items-center justify-content-between">
-  <img src="assets/images/icons/Logo.svg" [class.d-none]="toggled" alt="Logo">
-  <img class="toggle-icon  pointer" [class.active]="toggled" src="assets/images/icons/Close Menu.svg"
-    (click)="toggleSidebar()" width="50" height="50" alt="toggle menu">
-</div> -->
