--- a/src/app/layout/components/navbar-item/navbar-item.component.scss
+++ b/src/app/layout/components/navbar-item/navbar-item.component.scss
@@ -1,8 +1,10 @@
-@import '~@angular/material/theming';
-@import 'functions';
+@import "~@angular/material/theming";
+@import "functions";
 :host {
   display: block;
   .navbar-item {
+    height: 55px;
+    width: 55px;
     font-weight: 400;
     ::ng-deep {
       .mat-button-wrapper {
@@ -17,8 +19,13 @@
   &:hover {
     .navbar-item {
       &__pin {
-        display: block;
+        display: flex;
       }
+    }
+  }
+  .navbar-item-title {
+    mat-icon {
+      width: 30px;
     }
   }
 }
