--- a/src/app/partials/page-wrapper/page-wrapper.component.html
+++ b/src/app/partials/page-wrapper/page-wrapper.component.html
@@ -1,4 +1,4 @@
-<h5 class="text-capitalize mat-elevation-z2 bg--primary py-3 px-3 text-white mb-5">{{ title }}</h5>
+<h5 class="text-capitalize bg-white py-3 px-3 text-dark border-bottom mb-5">{{ title }}</h5>
 <div class="container-fluid">
     <ng-content></ng-content>
 </div>
