--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
@@ -1,16 +1,32 @@
-<mat-list>
+<mat-nav-list>
     <div class="d-flex justify-content-between align-items-baseline">
         <h3 mat-subheader> Folders </h3>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="toggleFolderCreation()">
             <mat-icon class="text-muted">create_new_folder</mat-icon>
         </button>
     </div>
     <mat-divider></mat-divider>
-    <mat-list-item *ngFor="let folder of folders">
+
+    <ng-container *ngIf="createFolderActive">
+        <div class="px-3">
+            <mat-form-field appearance="legacy">
+                <mat-hint>Folder name...</mat-hint>
+                <input matInput #folderInput>
+                <button (click)="createFolder(folderInput.value)" [disabled]="!folderInput.value" mat-icon-button
+                    matSuffix>
+                    <mat-icon class="text-muted">add</mat-icon>
+                </button>
+            </mat-form-field>
+        </div>
+        <div class="mb-3"></div>
+        <mat-divider></mat-divider>
+    </ng-container>
+
+    <mat-list-item (click)="getFolderFiles(folder)" *ngFor="let folder of folders">
         <mat-icon mat-list-icon>
             folder
             <!-- Active => 'folder_open' -->
         </mat-icon>
         <h4 mat-line>{{folder.name}}</h4>
     </mat-list-item>
-</mat-list>
+</mat-nav-list>
