--- a/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.html
+++ b/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.html
@@ -1,25 +1,6 @@
-<header class="container-fluid d-flex align-items-center justify-content-between">
-    <div class="w-50">
-        <mat-form-field appearance="legacy">
-            <mat-label>Search for a file!</mat-label>
-            <input matInput>
-        </mat-form-field>
-    </div>
-    <div class="actions d-flex align-items-center">
-        <button mat-stroked-button>Upload</button>
-        <div class="d-flex align-items-center mx-2">
-            <button mat-icon-button class="view-icon">
-                <mat-icon>list</mat-icon>
-            </button>
-            <span class="toolbar-seperator mx-1"></span>
-            <button mat-icon-button class="view-icon">
-                <mat-icon>grid_on</mat-icon>
-            </button>
-        </div>
-    </div>
-</header>
+<app-media-hub-header></app-media-hub-header>
 <mat-divider></mat-divider>
-<div class="row">
+<div class="row h-100">
     <div class="col-3 border-right pr-0">
         <app-media-hub-folders></app-media-hub-folders>
     </div>
