use sticky bar instead of absolute

--- a/src/app/layout/container/container.component.scss
+++ b/src/app/layout/container/container.component.scss
@@ -1,19 +1,15 @@
-@import 'functions';
-@import 'mixins';
-@import 'variables';
-@import '~@angular/material/theming';
+@import "functions";
+@import "mixins";
+@import "variables";
+@import "~@angular/material/theming";
 
 :host {
   app-toolbar {
-    @include fixed_bar(absolute);
+    @include fixed_bar(sticky);
   }
 
   .router-container {
-    $height: map-get(
-      $map: $layout_dimensions,
-      $key: toolbar-height
-    );
-    margin-top: calc(#{$height} * 1);
+    @include overflowHeight();
   }
   app-sidebar {
     --width: 230px;
