--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,6 +1,6 @@
-@import 'functions';
-@import 'mixins';
-@import 'variables';
+@import "functions";
+@import "mixins";
+@import "variables";
 
 html,
 body {
@@ -10,7 +10,6 @@ body {
 body {
   margin: 0;
   background-color: #f5f9fa;
-  overflow: hidden;
 }
 
 .backdrop {
@@ -46,19 +45,19 @@ body {
   @include center_block();
 }
 
-mat-form-field {
-  width: 100%;
-  $base_width: 0.75em;
-  &[appearance='outline'] {
-    .mat-form-field-infix {
-      padding: $base_width 0 $base_width 0 !important;
-      .mat-form-field-label-wrapper {
-        top: -1em !important;
-        padding-top: $base_width !important;
-      }
-    }
-  }
-}
+// mat-form-field {
+//   width: 100%;
+//   $base_width: 0.75em;
+//   &[appearance="outline"] {
+//     .mat-form-field-infix {
+//       padding: $base_width 0 $base_width 0 !important;
+//       .mat-form-field-label-wrapper {
+//         top: -1em !important;
+//         padding-top: $base_width !important;
+//       }
+//     }
+//   }
+// }
 
 body {
   &.no-connection {
