--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -1,5 +1,6 @@
 // All scss mixins must be here, expand the mixins into folder if the file has a huge line
-@import '~bootstrap/scss/bootstrap-grid';
+@import "~bootstrap/scss/bootstrap-grid";
+@import "variables";
 
 @mixin placeholder {
   &::-webkit-input-placeholder {
@@ -128,7 +129,7 @@
     height: 100%;
     background-color: $color;
     z-index: 999;
-    content: '';
+    content: "";
   }
 }
 
@@ -175,8 +176,16 @@
 }
 
 @mixin direction($dir) {
-  body[dir='#{$dir}'] &,
-  html[dir='#{$dir}'] & {
+  body[dir="#{$dir}"] &,
+  html[dir="#{$dir}"] & {
     @content;
   }
+}
+
+@mixin overflowHeight($threshold: 0px) {
+  $toolbar-height: map-get(
+    $map: $layout_dimensions,
+    $key: toolbar-height
+  );
+  height: calc(100% - #{$toolbar-height} - #{$threshold});
 }
